--- a/interview-list.html
+++ b/interview-list.html
@@ -164,7 +164,7 @@
             <div class="medium-3 columns"><a href="mural-list.html" class="linkFade">MURALS</a></div>
             <div class="medium-3 columns"><a href="festival-list.html" class="linkFade">FESTIVALS</a></div>
             <div class="medium-3 columns"><a href="participants.html" class="linkFade">PARTICIPANTS</a></div>
-            <div class="medium-3 columns"><a href="location.html" class="linkFade">VIDEO</a></div>
+            <div class="medium-3 columns"><a href="video-list.html" class="linkFade">VIDEO</a></div>
           </div>
         </div>
         <div class="medium-1 columns header-menu mobile-fix">
@@ -194,8 +194,8 @@
             <div class="small-12 columns"><a href="mural-list.html" class="linkFade">MURALS</a></div>
             <div class="small-12 columns"><a href="festival-list.html" class="linkFade">FESTIVALS</a></div>
             <div class="small-12 columns"><a href="participants.html" class="linkFade">PARTICIPANTS</a></div>
-            <div class="small-12 columns"><a href="location.html" class="linkFade">VIDEO</a></div>
-            <div class="small-12 columns"><a href="location.html" class="linkFade">PROJECTS</a></div>
+            <div class="small-12 columns"><a href="video-list.html" class="linkFade">VIDEO</a></div>
+            <div class="small-12 columns"><a href="project-list.html" class="linkFade">PROJECTS</a></div>
             <div class="small-12 columns"><a href="location.html" class="linkFade">EDUCATION</a></div>
             <div class="small-12 columns"><a href="about.html" class="linkFade">ABOUT</a></div>
             <div class="small-12 columns"><a href="http://shop.powwowhawaii.com/" target="_blank">Shop	</a></div>
@@ -214,9 +214,9 @@
         <div class="parallax-container">
           <div class="parallax"><img src="img/banner1.jpg"></div>
           <div class="banner-slogan">
-            <p class="page-slogan">videos</p>
-            <p class="page-sub-slogan">pow! wow! videos</p>
-            <div class="banner-button arrow-down"><a id="contentlink" href="#">SEE VIDEOS</a></div>
+            <p class="page-slogan">interview</p>
+            <p class="page-sub-slogan">hear what these artists have to say</p>
+            <div class="banner-button arrow-down"><a id="contentlink" href="#">SEE INTERVIEWS</a></div>
           </div>
         </div><a id="content" href="#"></a>
         <div class="index-block index-mural padding-top-120 padding-column">
@@ -227,7 +227,9 @@
                     <div style="background-image: url(img/alexface_thumb.jpg);" class="i-artist-thumb">
                       <div class="i-artist-overlay"></div>
                       <div class="artist-name-cat">
-                        <p>POW! WOW! IN KOBE</p>
+                        <p>alexface</p>
+                        <p class="underline"></p>
+                        <p>graffiti artist</p>
                       </div>
                     </div>
                   </div></a></div>
@@ -236,7 +238,9 @@
                     <div style="background-image: url(img/caratoes_thumb.jpg);" class="i-artist-thumb">
                       <div class="i-artist-overlay"></div>
                       <div class="artist-name-cat">
-                        <p>POW! WOW! WORCESTER 2016</p>
+                        <p>caratoes</p>
+                        <p class="underline"></p>
+                        <p>graffiti artist</p>
                       </div>
                     </div>
                   </div></a></div>
@@ -245,7 +249,9 @@
                     <div style="background-image: url(img/colasa_thumb.jpg);" class="i-artist-thumb">
                       <div class="i-artist-overlay"></div>
                       <div class="artist-name-cat">
-                        <p>Imprint Presents: Ernest Zacharevic and Martha Cooper Talk</p>
+                        <p>colasa</p>
+                        <p class="underline"></p>
+                        <p>music artist</p>
                       </div>
                     </div>
                   </div></a></div>
@@ -254,7 +260,9 @@
                     <div style="background-image: url(img/debe_thumb.jpg);" class="i-artist-thumb">
                       <div class="i-artist-overlay"></div>
                       <div class="artist-name-cat">
-                        <p>POW! WOW! SCHOOL OF MUSIC 2016</p>
+                        <p>debe</p>
+                        <p class="underline"></p>
+                        <p>music artist</p>
                       </div>
                     </div>
                   </div></a></div>
@@ -263,7 +271,9 @@
                     <div style="background-image: url(img/girenhao_thumb.jpg);" class="i-artist-thumb">
                       <div class="i-artist-overlay"></div>
                       <div class="artist-name-cat">
-                        <p>POW! WOW! LONG BEACH 2016 VIDEO BY HEX</p>
+                        <p>girenhao</p>
+                        <p class="underline"></p>
+                        <p>graffiti artist</p>
                       </div>
                     </div>
                   </div></a></div>
@@ -272,7 +282,9 @@
                     <div style="background-image: url(img/horton_thumb.jpg);" class="i-artist-thumb">
                       <div class="i-artist-overlay"></div>
                       <div class="artist-name-cat">
-                        <p>POW! WOW! LONG BEACH THROUGH THE EYES OF JORDAN AHERN</p>
+                        <p>horton</p>
+                        <p class="underline"></p>
+                        <p>graffiti artist</p>
                       </div>
                     </div>
                   </div></a></div>
@@ -281,7 +293,9 @@
                     <div style="background-image: url(img/nychos_thumb.jpg);" class="i-artist-thumb">
                       <div class="i-artist-overlay"></div>
                       <div class="artist-name-cat">
-                        <p>POW! WOW! SXSW 2015 OFFICIAL RECAP VIDEO</p>
+                        <p>nychos</p>
+                        <p class="underline"></p>
+                        <p>graffiti artist</p>
                       </div>
                     </div>
                   </div></a></div>
@@ -304,8 +318,8 @@
               <div><a href="mural-list.html" class="linkFade">Murals</a></div>
               <div><a href="festival-list.html" class="linkFade">Festivals</a></div>
               <div><a href="participants.html" class="linkFade">Participants</a></div>
-              <div><a href="location.html" class="linkFade">Video</a></div>
-              <div><a href="location.html" class="linkFade">Projects</a></div>
+              <div><a href="video-list.html" class="linkFade">Video</a></div>
+              <div><a href="project-list.html" class="linkFade">Projects</a></div>
               <div><a href="location.html" class="linkFade">Education</a></div>
               <div><a href="about.html" class="linkFade">About</a></div>
               <div><a href="http://shop.powwowhawaii.com/" target="_blank">Shop</a></div>
