--- a/mural.html
+++ b/mural.html
@@ -179,7 +179,7 @@
             <div class="medium-3 columns"><a href="mural-list.html" class="linkFade">MURALS</a></div>
             <div class="medium-3 columns"><a href="festival-list.html" class="linkFade">FESTIVALS</a></div>
             <div class="medium-3 columns"><a href="participants.html" class="linkFade">PARTICIPANTS</a></div>
-            <div class="medium-3 columns"><a href="location.html" class="linkFade">LOCATION</a></div>
+            <div class="medium-3 columns"><a href="video-list.html" class="linkFade">VIDEO</a></div>
           </div>
         </div>
         <div class="medium-1 columns header-menu mobile-fix">
@@ -209,8 +209,11 @@
             <div class="small-12 columns"><a href="mural-list.html" class="linkFade">MURALS</a></div>
             <div class="small-12 columns"><a href="festival-list.html" class="linkFade">FESTIVALS</a></div>
             <div class="small-12 columns"><a href="participants.html" class="linkFade">PARTICIPANTS</a></div>
-            <div class="small-12 columns"><a href="location.html" class="linkFade">LOCATION</a></div>
+            <div class="small-12 columns"><a href="video-list.html" class="linkFade">VIDEO</a></div>
+            <div class="small-12 columns"><a href="project-list.html" class="linkFade">PROJECTS</a></div>
+            <div class="small-12 columns"><a href="location.html" class="linkFade">EDUCATION</a></div>
             <div class="small-12 columns"><a href="about.html" class="linkFade">ABOUT</a></div>
+            <div class="small-12 columns"><a href="http://shop.powwowhawaii.com/" target="_blank">Shop	</a></div>
             <div class="sm-lang-box-wrapper">
               <div class="lang-select-box">
                 <select class="cs-select lang-select cs-skin-underline">
@@ -223,11 +226,12 @@
         </div>
       </div>
       <div class="content padding-column">
-        <div class="mural-img"><img src="img/madsteez-mural.jpg"></div>
-        <div class="mural-des">
-          <p>Pow Wow Hawaii 2015. </p>
-          <p>Painted by Madsteez. </p>
-          <p>Photo by Pow Wow</p>
+        <div class="mural-img"><img src="img/madsteez-mural.jpg">
+          <div class="mural-des">
+            <p>Pow Wow Hawaii 2015. </p>
+            <p>Painted by Madsteez. </p>
+            <p>Photo by Pow Wow</p>
+          </div>
         </div>
         <p class="index-title small-title divided-title">location</p>
         <div class="google-maps"><iframe src="https://www.google.com/maps/d/u/0/embed?mid=19s8FCjqTaJEw3mL0B5paTyTV8GU" width="640" height="480"></iframe></div>
@@ -282,8 +286,11 @@
               <div><a href="mural-list.html" class="linkFade">Murals</a></div>
               <div><a href="festival-list.html" class="linkFade">Festivals</a></div>
               <div><a href="participants.html" class="linkFade">Participants</a></div>
-              <div><a href="location.html" class="linkFade">Location</a></div>
-              <div><a href="#" class="linkFade">About</a></div>
+              <div><a href="video-list.html" class="linkFade">Video</a></div>
+              <div><a href="project-list.html" class="linkFade">Projects</a></div>
+              <div><a href="location.html" class="linkFade">Education</a></div>
+              <div><a href="about.html" class="linkFade">About</a></div>
+              <div><a href="http://shop.powwowhawaii.com/" target="_blank">Shop</a></div>
             </div>
           </div>
           <div class="medium-3 small-12 columns">
