--- a/video-list.html
+++ b/video-list.html
@@ -164,7 +164,7 @@
             <div class="medium-3 columns"><a href="mural-list.html" class="linkFade">MURALS</a></div>
             <div class="medium-3 columns"><a href="festival-list.html" class="linkFade">FESTIVALS</a></div>
             <div class="medium-3 columns"><a href="participants.html" class="linkFade">PARTICIPANTS</a></div>
-            <div class="medium-3 columns"><a href="location.html" class="linkFade">VIDEO</a></div>
+            <div class="medium-3 columns"><a href="video-list.html" class="linkFade">VIDEO</a></div>
           </div>
         </div>
         <div class="medium-1 columns header-menu mobile-fix">
@@ -194,8 +194,8 @@
             <div class="small-12 columns"><a href="mural-list.html" class="linkFade">MURALS</a></div>
             <div class="small-12 columns"><a href="festival-list.html" class="linkFade">FESTIVALS</a></div>
             <div class="small-12 columns"><a href="participants.html" class="linkFade">PARTICIPANTS</a></div>
-            <div class="small-12 columns"><a href="location.html" class="linkFade">VIDEO</a></div>
-            <div class="small-12 columns"><a href="location.html" class="linkFade">PROJECTS</a></div>
+            <div class="small-12 columns"><a href="video-list.html" class="linkFade">VIDEO</a></div>
+            <div class="small-12 columns"><a href="project-list.html" class="linkFade">PROJECTS</a></div>
             <div class="small-12 columns"><a href="location.html" class="linkFade">EDUCATION</a></div>
             <div class="small-12 columns"><a href="about.html" class="linkFade">ABOUT</a></div>
             <div class="small-12 columns"><a href="http://shop.powwowhawaii.com/" target="_blank">Shop	</a></div>
@@ -222,7 +222,7 @@
         <div class="index-block index-mural padding-top-120 padding-column">
           <div class="artists-content-block">
             <div class="row">
-              <div class="medium-4 small-12 columns index-artist-block revealer safari_only"><a href="artist.html" class="linkFade">
+              <div class="medium-4 small-12 columns index-artist-block revealer safari_only"><a href="video.html" class="linkFade">
                   <div class="ratio-hack">
                     <div style="background-image: url(img/alexface_thumb.jpg);" class="i-artist-thumb">
                       <div class="i-artist-overlay"></div>
@@ -231,7 +231,7 @@
                       </div>
                     </div>
                   </div></a></div>
-              <div class="medium-4 small-12 columns index-artist-block revealer safari_only"><a href="artist.html" class="linkFade">
+              <div class="medium-4 small-12 columns index-artist-block revealer safari_only"><a href="video.html" class="linkFade">
                   <div class="ratio-hack">
                     <div style="background-image: url(img/caratoes_thumb.jpg);" class="i-artist-thumb">
                       <div class="i-artist-overlay"></div>
@@ -240,7 +240,7 @@
                       </div>
                     </div>
                   </div></a></div>
-              <div class="medium-4 small-12 columns index-artist-block revealer safari_only"><a href="artist.html" class="linkFade">
+              <div class="medium-4 small-12 columns index-artist-block revealer safari_only"><a href="video.html" class="linkFade">
                   <div class="ratio-hack">
                     <div style="background-image: url(img/colasa_thumb.jpg);" class="i-artist-thumb">
                       <div class="i-artist-overlay"></div>
@@ -249,7 +249,7 @@
                       </div>
                     </div>
                   </div></a></div>
-              <div class="medium-4 small-12 columns index-artist-block revealer safari_only"><a href="artist.html" class="linkFade">
+              <div class="medium-4 small-12 columns index-artist-block revealer safari_only"><a href="video.html" class="linkFade">
                   <div class="ratio-hack">
                     <div style="background-image: url(img/debe_thumb.jpg);" class="i-artist-thumb">
                       <div class="i-artist-overlay"></div>
@@ -258,7 +258,7 @@
                       </div>
                     </div>
                   </div></a></div>
-              <div class="medium-4 small-12 columns index-artist-block revealer safari_only"><a href="artist.html" class="linkFade">
+              <div class="medium-4 small-12 columns index-artist-block revealer safari_only"><a href="video.html" class="linkFade">
                   <div class="ratio-hack">
                     <div style="background-image: url(img/girenhao_thumb.jpg);" class="i-artist-thumb">
                       <div class="i-artist-overlay"></div>
@@ -267,7 +267,7 @@
                       </div>
                     </div>
                   </div></a></div>
-              <div class="medium-4 small-12 columns index-artist-block revealer safari_only"><a href="artist.html" class="linkFade">
+              <div class="medium-4 small-12 columns index-artist-block revealer safari_only"><a href="video.html" class="linkFade">
                   <div class="ratio-hack">
                     <div style="background-image: url(img/horton_thumb.jpg);" class="i-artist-thumb">
                       <div class="i-artist-overlay"></div>
@@ -276,7 +276,7 @@
                       </div>
                     </div>
                   </div></a></div>
-              <div class="medium-4 small-12 columns index-artist-block revealer safari_only"><a href="artist.html" class="linkFade">
+              <div class="medium-4 small-12 columns index-artist-block revealer safari_only"><a href="video.html" class="linkFade">
                   <div class="ratio-hack">
                     <div style="background-image: url(img/nychos_thumb.jpg);" class="i-artist-thumb">
                       <div class="i-artist-overlay"></div>
@@ -304,8 +304,8 @@
               <div><a href="mural-list.html" class="linkFade">Murals</a></div>
               <div><a href="festival-list.html" class="linkFade">Festivals</a></div>
               <div><a href="participants.html" class="linkFade">Participants</a></div>
-              <div><a href="location.html" class="linkFade">Video</a></div>
-              <div><a href="location.html" class="linkFade">Projects</a></div>
+              <div><a href="video-list.html" class="linkFade">Video</a></div>
+              <div><a href="project-list.html" class="linkFade">Projects</a></div>
               <div><a href="location.html" class="linkFade">Education</a></div>
               <div><a href="about.html" class="linkFade">About</a></div>
               <div><a href="http://shop.powwowhawaii.com/" target="_blank">Shop</a></div>
